try migrating to key / display string format